--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "malik": "nodemon src/server.js",
-    "start": "node src/server.js,"
+    "start": "node src/server.js"
   },
   "type": "module",
   "keywords": [],
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mern-stack": "file:..",
     "mongoose": "^9.0.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
